# TinyShell

./: CMakeLists.txt  README.md  main.c
include/: tinyshell.h
src/: tinyshell.c  tinyshell.h
tests/: test_tinyshell.c
